Update CSS to fix style lint errors

--- a/css/00-banner.css
+++ b/css/00-banner.css
@@ -1,7 +1,7 @@
 /*
  Theme Name:     WSU 25 by 2030
  Theme URI:      https://wsu.edu/drive-to-25/
- Description:    A Washington State University Spine child theme for the Top 25 initiative
+ Description:    A WSU Spine child theme for the Top 25 initiative
  Author:         WSU University Communications
  Author URI:     https://web.wsu.edu
  Template:       spine
