--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -61,10 +61,11 @@ li {
 }
 
 #top .top-message {
-	width: 250px;
-	text-transform: none;
-	padding-top: 2em;
 	color: #919191;
+	letter-spacing: .05em;
+	padding-top: 2em;
+	text-transform: none;
+	width: 350px;
 }
 
 .wsu-top a {
@@ -244,11 +245,68 @@ p a.btncrm:hover {
 }
 
 .past-event {
-	color: rgba(183, 183, 183, 1) !important;
+	color: rgba(183, 183, 183, 1);
 }
 
 .blog h3,
 .single-post h3 {
-	font-size: 1.6rem;
+	font-size: 1rem;
+	font-weight: 900;
+	letter-spacing: .05rem;
+	padding: 1rem 0 .25rem;
+}
+
+h1.article-title {
+	font-weight: 300;
+	color: #981e32;
+}
+
+main article header h2 {
+	margin-bottom: 0;
+	font-size: 2.25rem;
+}
+
+.post-sub {
+	font-size: 1.75em;
+	font-weight: 300;
+	letter-spacing: 0;
+	padding-bottom: 3rem;
+	color: #6a6a6a;
+	line-height: 1.25em;
+}
+
+.article-header hgroup.source,
+.article-header .hgroup.source {
+	text-transform: uppercase;
+	padding: 0 0 .5rem;
+	font-size: .9em;
+	color: rgba(0, 0, 0, .5);
+	border-bottom: solid 1px #e3e3e3;
+	margin-bottom: 2rem;
+}
+
+aside.widget header {
+	font-size: 1.25rem;
 	font-weight: 700;
+	line-height: 1.25;
+	margin-bottom: .5rem;
+}
+
+aside.widget p {
+	font-size: .85rem;
+}
+
+.button {
+	border-radius: 0;
+	background: #fff;
+	border: 1px solid #981e32;
+	color: #981e32;
+	transition: all .3s ease;
+	padding: .5em 2.5em;
+}
+
+.button:hover {
+	background: #981e32;
+	color: #fff;
+	border: 1px solid #981e32;
 }
