--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -2,6 +2,27 @@ html {
 	background: #fff;
 }
 
+body {
+	background-color: #981e32;
+}
+
+main {
+	background-color: #fff;
+}
+
+.main-header {
+	height: auto;
+	z-index: 100;
+	position: relative;
+	width: auto;
+	padding: 1rem 0 3rem;
+	background-color: #fff;
+}
+
+#spine #glue:before {
+	border-right: solid 1px #b5babe;
+}
+
 section > header {
 	padding: 2rem 2rem 0;
 }
